Fixed responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-
 :root {
     --primary: black;
     --secondary: #592E83;
@@ -18,10 +14,6 @@ body {
     background: url('bg_gradient.png'), linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)) no-repeat;
     background-size: 100% 100%;
     color: --primary;
-}
-
-.section {
-    padding: 10vh;
 }
 
 /*────────────────── Header ──────────────────*/
@@ -120,50 +112,17 @@ h4 {
     font-size: 1vmax;
 }
 
-/*                  Arrow Down Button         */
-
-.scroll a {
-    position: absolute;
-    bottom: 5vh;
-    display: inline-block;
-    color: --primary;
-    text-decoration: none;
-    padding-top: 15vh;
-}
-
-#scroll a span {
-    position: absolute;
-    top: 0;
-    width: 5vmin;
-    height: 5vmin;
-    margin-left: -.5vw;
-    border-left: .8vmin solid --primary;
-    border-bottom: .8vmin solid --primary;
-    transform: rotate(-45deg);
-    animation: sdb07 2s infinite;
-    box-sizing: border-box;
-}
-
-@keyframes sdb07 {
-    0% {
-        opacity: 0.5;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0.5;
-    }
-}
-
 /*────────────────── About Me ──────────────────*/
 
 .about {
     text-align: center;
     color: var(--primary);
-    padding: 0 10vw;
+    padding: 20vh 10vw 5vh 10vw;
+    min-height: 100vh;
+}
+
+.about h2 {
+    font-weight: bold;
 }
 
 hr {
@@ -176,7 +135,7 @@ hr {
 .about p {
     padding-top: 1vh;
     text-align: left;
-    font-size: 3vmin;
+    font-size: 1.5vmax;
 }
 
 /*             Resume Buttons                */
@@ -188,8 +147,9 @@ hr {
     border: 0.3vmin solid var(--primary);
     display: inline-block;
     padding: 3vmin 2vmax;
+    margin-left: 3vmax;
+    margin-right: 3vmax;
     margin-top: 3vh;
-    margin-left: 5vmax;
     box-shadow: 1vmin 1vmin rgba(89, 46, 131, 0.5);
 }
 
@@ -223,18 +183,14 @@ hr {
 
 /*────────────────── Projects ──────────────────*/
 
-#projects {
-    text-align: center;
-    color: var(--secondary);
-}
-
 .projects {
     text-align: center;
     color: var(--primary);
-    padding: 5vh 0;
+    padding: 5vh 5vw;
 }
 
 .projects h1 {
+    margin-top: 10vh;
     font-size: 3vmax;
     font-family: 'Playfair Display', serif;
 }
@@ -246,9 +202,13 @@ hr {
 }
 
 .projects h3 {
-    font-size: 1.5vmax;
+    font-size: 1.75vmax;
     margin-bottom: 2vh;
     text-align: center;
+}
+
+.projects p {
+    font-size: 1vmax;
 }
 
 .projects a {
@@ -265,14 +225,15 @@ hr {
     display: flex;
     gap: 2vw;
     flex-wrap: wrap;
+    min-width: 80vw;
     justify-content: center;
 }
 
 .card {
     background: #fff;
-    border-radius: 8px;
+    border-radius: 1vmax;
     box-shadow: 0 0.5vmin 0.75vmin rgba(89, 46, 131, 0.2);
-    padding: 2vmax;
+    padding: 3vmax;
     max-width: 300px;
     text-align: left;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -307,12 +268,7 @@ hr {
     margin: auto;
     min-height: 60vh;
     text-align: center;
-    padding-top: 15vh;
-}
-
-#contact p {
-    padding: 2vh;
-    font-size: 4vmin;
+    padding-top: 20vh;
 }
 
 /*────────────────── Footer ──────────────────*/
@@ -334,7 +290,7 @@ footer {
 }
 
 .social-media a {
-    margin: 2vmin 1vmax;
+    margin: 2vmin 2vmax;
     font-size: 3vmax;
     text-align: center;
     display: inline-block;
@@ -416,6 +372,11 @@ footer {
         transition: transform 0.5s ease-in;
     }
 
+    .left-item {
+        margin-left: 1vw;
+        margin-right: 1vw;
+    }
+
     header:hover {
         background: transparent;
     }
@@ -435,24 +396,7 @@ footer {
         background-color: white;
         padding: 2vmax 3vmax;
         border: solid .5vmin;
-    }
-
-    .about p {
-        text-align: left;
-        font-size: 4vmin;
-    }
-
-    #contact p {
-        padding: 10px 50px;
-    }
-
-    .descrip {
-        padding-left: 2vw;
-        min-width: 50vw;
-    }
-
-    .social-media a {
-        margin: 2vmax;
+        box-shadow: 1vmin 1vmin rgba(89, 46, 131, 0.5);
     }
 }
 
